--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,5 +2,5 @@
 %p= @post.content
 
 = link_to "Edit", edit_post_path(@post)
-= link_to "Delete", post_path(@post), method: :delete, date: { confirm: "Are you sure you want to delete this?"}
+= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this?"}
 = link_to "Home", root_path
